[FIX] bug in the template

--- a/lib/stethoscope/template.erb
+++ b/lib/stethoscope/template.erb
@@ -12,7 +12,7 @@
         <ul class='checks'>
         <% checks.each do |name, hash| %>
           <li>
-            <strong><%= name %>:<strong>
+            <strong><%= name %>:</strong>
             <ul>
               <% hash.each do |item, value| %>
                 <li>
